--- a/.gitignore
+++ b/.gitignore
@@ -345,5 +345,5 @@ playground.xcworkspace
 
 # Build files
 build/
-
+.dart_tool/flutter_build/
 # End of https://www.gitignore.io/api/dart,swift,xcode,android,intellij,cocoapods,objective-c,androidstudio
